[project]
name = "async-web-crawler"
version = "0.1.0"
description = "Advanced async web crawler with AI agent integration - inspect, discover, crawl, and extract web content"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Madgula Amit", email = "your.email@example.com"}
]
keywords = [
    "web-crawler",
    "web-scraping",
    "async",
    "playwright",
    "ai-agent",
    "langchain",
    "crewai",
    "content-extraction",
    "sitemap",
    "markdown"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fake-useragent>=2.2.0",
    "httpx>=0.28.1",
    "markdownify>=1.2.2",
    "playwright>=1.56.0",
    "playwright-stealth>=2.0.0",
    "readability-lxml>=0.8.4.1",
    "requests>=2.32.5",
]

[project.urls]
Homepage = "https://github.com/AmitSharmamad/crawler"
Repository = "https://github.com/AmitSharmamad/crawler"
Documentation = "https://github.com/AmitSharmamad/crawler#readme"
Issues = "https://github.com/AmitSharmamad/crawler/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.25.2",
    "black>=24.0.0",
    "mypy>=1.0.0",
]
agents = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "crewai>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["tool.py", "util.py"]

[tool.hatch.build.targets.sdist]
include = [
    "tool.py",
    "util.py",
    "__init__.py",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
filterwarnings = [
    # Ignore playwright-stealth library warning (known issue with async context)
    "ignore:coroutine 'Page.add_init_script' was never awaited:RuntimeWarning",
]
